# mail-pal

./: .gitignore  README.md  TROUBLESHOOTING.md  config.py  conftest.py  main.py  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci.yml
functions/run_pipeline/: main.py  pipeline.py
functions/slack_handler/: handler.py  lambda.py
layers/dependencies/: requirements.txt
models/: event.py
services/: README.md  credentials.py  declined_events.py  gcal.py  gemini.py  gmail.py  google_quickstart.py  llm_base.py  prompt.py  slack.py  slack_client.py  slack_response.py
src/: config.py  main.py
src/functions/pipeline/: handler.py
src/functions/slack/: handler.py  worker.py
src/functions/slack_handler/: handler.py
src/models/: event.py  slack_action_payload.py
src/services/: README.md  declined_events.py  gcal.py  gemini.py  http_responses.py
src/services/aws/: db.py
src/services/google/: credentials.py  gcal.py  gemini.py  gmail.py  google_quickstart.py
src/services/llm/: gemini.py  llm_base.py  prompt.py
src/services/slack/: client.py  event_review.py  msg_builder.py  parser.py  validator.py
tests/: README.md  mock_email.py  mock_event.py  mock_slack_event.json  mock_slack_event.py  test_db.py  test_declined_events.py  test_gcal.py  test_gemini.py  test_gmail.py  test_slack.py  test_slack_client.py  test_slack_handler.py
