[project]
  name = "life-admin"
  version = "0.1.0"
  requires-python = ">=3.9"
  dependencies = [
    "google-api-python-client", 
    "google-auth-httplib2", 
    "google-auth-oauthlib",
    "python-dotenv",
    "google-genai",
    "beautifulsoup4",
    "boto3",
    "requests",
    "pydantic",
  ]

[project.optional-dependencies]
dev = [
  "pytest",
]