[project]
name = "event-miner"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
  "beautifulsoup4",
  "google-api-python-client", 
  "google-auth-httplib2", 
  "google-genai",
  "pydantic",
  "python-dotenv",
  "requests",
  "slack-sdk"
]

[dependency-groups]
dev = [
  "boto3",
  "google-auth-oauthlib",
  "pytest",
  "ruff"
]

# Ignore docstring argument checks
# [tool.ruff.lint]
# ignore = ["D417"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
 "integration: hits live external services (Slack, Google, Gemini). Not run by default.",
]

[tool.pyright]
extraPaths = ["src"]

[tool.ruff]
src = ["src"]
